# rp2040furnace

./: CMakeLists.txt  Makefile
config/: config.h
include/: max6675.h  relays.h  state.h  wifi.h
src/: main.c  max6675.c  relays.c  wifi.c
